implement basic outline

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,17 @@
 
         <script src="js/vendor/pixi.min.js"></script>
         <script src="js/vendor/jquery.min.js"></script>
+        <script src="js/constants.js"></script>
         <script src="js/game.js"></script>
     </head>
     <body>
+        <div id="login-container">
+            <div id="login">
+                <h2>Card Game</h2>
+                <span class="error"></span>
+                <input type="text" id="username" placeholder="Your Name" />
+                <button type="submit">Enter Game</button>
+            </div>
+        </div>
     </body>
 </html>
