start implementing turns and cards

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
         <link rel="stylesheet" type="text/css" href="css/game.css" />
 
         <script src="js/vendor/pixi.min.js"></script>
+        <script src="js/vendor/pixi-filters.min.js"></script>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/constants.js"></script>
         <script src="js/game.js"></script>
