add favicon headers

--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,9 @@
 <html>
     <head>
         <title>Card Game</title>
+        <link rel="icon" href="favicon.ico" type="image/x-icon" />
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+
         <link rel="stylesheet" type="text/css" href="css/game.css" />
 
         <script src="js/vendor/pixi.min.js"></script>
