add logo and set font

--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
         <link rel="stylesheet" type="text/css" href="css/game.css" />
+        <link href="https://fonts.googleapis.com/css?family=Pangolin" rel="stylesheet">
 
         <script src="js/vendor/pixi.min.js"></script>
         <script src="js/vendor/pixi-filters.min.js"></script>
