--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
         <script src="js/vendor/pixi.min.js"></script>
         <script src="js/vendor/pixi-filters.min.js"></script>
+        <script src="js/vendor/pixi-particles.min.js"></script>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/constants.js"></script>
         <script src="js/game.js"></script>
