--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
         <script src="js/vendor/pixi-particles.min.js"></script>
         <script src="js/vendor/jquery.min.js"></script>
         <script src="js/constants.js"></script>
+        <script src="js/ui.js"></script>
         <script src="js/game.js"></script>
     </head>
     <body>
